--- a/web/proba.html
+++ b/web/proba.html
@@ -48,8 +48,36 @@ and open the template in the editor.
                 </div>
             </div>
         </nav>
-        <p class="info" id="info">&nbsp</p>
-        <div id="content" class="flex-grow-1 mb-2"></div>
+        <div class="card border-primary mb-3 mx-auto" style="max-width: 40rem;">
+                <form id="form_add_accound">
+                    <h3 class="card-header text-center my-3">Add Shoes</h3>
+                    <div class="card-body">
+                      <div class="form-group">
+                        <label for="caption" class="form-label mt-4">Model</label>
+                        <input type="text" class="form-control" id="model" name="caption" placeholder="Model">
+                      </div>
+                      <div class="form-group">
+                        <label for="url" class="form-label mt-4">Brand</label>
+                        <input type="text" class="form-control" id="brand" name="url" placeholder="Brand">
+                      </div>
+                      <div class="form-group">
+                        <label for="login" class="form-label mt-4">#</label>
+                        <input type="text" class="form-control" id="login" name="login" placeholder="#">
+                      </div>
+                      <div class="form-group">
+                        <label for="password" class="form-label mt-4">#</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="#">
+                      </div>
+                      <div class="form-group">
+                        <label for="imageFile" class="form-label mt-4">#</label>
+                        <input class="form-control" type="file" id="image_file" name="imageFile">
+                      </div>  
+                      <div class="w-100 text-center my-3">
+                        <button type="submit" class="btn btn-primary my-3" id="btn_add_account">Add</button>
+                      </div>
+                    </div>
+                </form>
+            </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script type="module" src="js/app.js"></script>
     </body>
