--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,16 @@ and open the template in the editor.
                         </a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link d-none" href="#" id="menu_buy">Buy
+                          <span class="visually-hidden">(current)</span>   
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-none" href="#" id="menu_profile">Profile
+                          <span class="visually-hidden">(current)</span>   
+                        </a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link d-none" href="#" id="menu_admin">Admin Panel
                           <span class="visually-hidden">(current)</span>   
                         </a>
