added edit profile and edit model forms

--- a/web/index.html
+++ b/web/index.html
@@ -27,17 +27,22 @@ and open the template in the editor.
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_edit">Edit   
+                        <a class="nav-link d-none" href="#" id="menu_edit_m">Edit Model 
                           <span class="visually-hidden">(current)</span>
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_buy">Buy
-                          <span class="visually-hidden">(current)</span>   
+                        <a class="nav-link d-none" href="#" id="menu_edit_p">Edit Profile
+                          <span class="visually-hidden">(current)</span>
                         </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link d-none" href="#" id="menu_profile">Profile
+                          <span class="visually-hidden">(current)</span>   
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link d-none" href="#" id="menu_buy">Buy
                           <span class="visually-hidden">(current)</span>   
                         </a>
                       </li>
