--- a/web/proba.html
+++ b/web/proba.html
@@ -50,28 +50,38 @@ and open the template in the editor.
         </nav>
         <div class="card border-primary mb-3 mx-auto" style="max-width: 40rem;">
                 <form id="form_add_accound">
-                    <h3 class="card-header text-center my-3">Add Shoes</h3>
+                    <h3 class="card-header text-center my-3">Edit Account</h3>
                     <div class="card-body">
                       <div class="form-group">
-                        <label for="caption" class="form-label mt-4">Model</label>
-                        <input type="text" class="form-control" id="model" name="caption" placeholder="Model">
+                        <label for="exampleSelect1" class="form-label mt-4">Account</label>
+                        <select class="form-select" id="exampleSelect1">
+                          <option>#</option>
+                        </select>
                       </div>
                       <div class="form-group">
-                        <label for="url" class="form-label mt-4">Brand</label>
-                        <input type="text" class="form-control" id="brand" name="url" placeholder="Brand">
+                        <label for="url" class="form-label mt-4">First Name</label>
+                        <input type="text" class="form-control" id="#" name="#" placeholder="First Name">
                       </div>
                       <div class="form-group">
-                        <label for="login" class="form-label mt-4">#</label>
-                        <input type="text" class="form-control" id="login" name="login" placeholder="#">
+                        <label for="url" class="form-label mt-4">Last Name</label>
+                        <input type="text" class="form-control" id="#" name="#" placeholder="Last Name">
                       </div>
                       <div class="form-group">
-                        <label for="password" class="form-label mt-4">#</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="#">
+                        <label for="login" class="form-label mt-4">Phone</label>
+                        <input type="text" class="form-control" id="#" name="#" placeholder="Phone">
                       </div>
                       <div class="form-group">
-                        <label for="imageFile" class="form-label mt-4">#</label>
-                        <input class="form-control" type="file" id="image_file" name="imageFile">
-                      </div>  
+                        <label for="password" class="form-label mt-4">Login</label>
+                        <input type="text" class="form-control" id="#" name="#" placeholder="Login">
+                      </div>
+                      <div class="form-group">
+                        <label for="password" class="form-label mt-4">Password</label>
+                        <input type="password" class="form-control" id="#" name="#" placeholder="Password">
+                      </div> 
+                      <div class="form-group">
+                        <label for="password1" class="form-label mt-4">Repeat Password</label>
+                        <input type="password" class="form-control" id="#" name="#" placeholder="Repeat Password">
+                      </div> 
                       <div class="w-100 text-center my-3">
                         <button type="submit" class="btn btn-primary my-3" id="btn_add_account">Add</button>
                       </div>
