--- a/web/index.html
+++ b/web/index.html
@@ -15,14 +15,14 @@ and open the template in the editor.
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#" id="menu_list_pages">Shoe Shop</a>
+                <a class="navbar-brand" href="#" id="menu_list_m">Shoe Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                       <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_add">Add
+                        <a class="nav-link d-none" href="#" id="menu_add_m">Add Model
                             <span class="visually-hidden">(current)</span>
                         </a>
                       </li>
@@ -32,22 +32,12 @@ and open the template in the editor.
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_edit_p">Edit Profile
-                          <span class="visually-hidden">(current)</span>
-                        </a>
-                      </li>
-                      <li class="nav-item">
                         <a class="nav-link d-none" href="#" id="menu_profile">Profile
                           <span class="visually-hidden">(current)</span>   
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_buy">Buy
-                          <span class="visually-hidden">(current)</span>   
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link d-none" href="#" id="menu_admin">Admin Panel
+                        <a class="nav-link d-none" href="#" id="menu_admin_panel">Admin Panel
                           <span class="visually-hidden">(current)</span>   
                         </a>
                       </li>
